 - Tool for converting scanned pictures of e-Reader cards to raw dotcode data
 - Cheat code support in homebrew ports
 - Support for combo "Super Game Boy Color" SGB + GBC ROM hacks
 - Support for 64 kiB SRAM saves used in some bootlegs
Emulation fixes:
 - GB Video: Clear VRAM on reset (fixes mgba.io/i/2152)
 - GBA SIO: Add missing NORMAL8 implementation bits (fixes mgba.io/i/2172)
 - GBA Video: Revert scanline latching changes (fixes mgba.io/i/2153, mgba.io/i/2149)
Other fixes:
 - 3DS: Fix disabling "wide" mode on 2DS (fixes mgba.io/i/2167)
 - ARM Debugger: Fix disassembly alignment (fixes mgba.io/i/2204)
 - Core: Fix memory leak in opening games from the library
 - Core: Fix memory searches for relative values (fixes mgba.io/i/2135)
 - Core: Fix portable mode on macOS
 - GB Core: Fix GBC colors setting breaking default model overrides (fixes mgba.io/i/2161)
 - GBA: Fix out of bounds ROM accesses on patched ROMs smaller than 32 MiB
 - Qt: Fix infrequent deadlock when using sync to video
 - Qt: Fix applying savetype-only overrides
 - Qt: Fix crash in sprite view for partially out-of-bounds sprites (fixes mgba.io/i/2165)
 - Qt: Fix having to press controller buttons twice for menu items (fixes mgba.io/i/2143)
 - Util: Fix loading UPS patches that affect the last byte of the file
Misc:
 - Core: Suspend runloop when a core crashes
 - Qt: Rearrange menus some
 - Qt: Clean up cheats dialog
 - Util: Improve speed of UPS patch loading

0.9.1: (2021-04-18)
Emulation fixes:
 - ARM: Fix LDM^ with empty rlist (fixes mgba.io/i/2127)
 - Core: Fix first event scheduling after loading savestate
 - GB Serialize: Fix switching speed modes when loading a state (fixes mgba.io/i/2097)
 - GB: Fix skipping BIOS
 - GBA Memory: Fix loading Thumb savestates when in ARM mode
 - GBA Video: Fix window start on modes 3-5 with mosaic (fixes mgba.io/i/1690)
 - GBA Video: Fix mode 3-5 overflow with mosaic (fixes mgba.io/i/1691)
Other fixes: